<resources>
    <string name="app_name">MyLOL</string>
    <string name="action_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_news">News</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_other">Others</string>
    <string name="about">关于:\n本应用Google Study Jams 2016 中国区活动结业作品</string>
    <string name="author">作者:张啟迪（Addi）</string>
    <string name="Github">Github：https://github.com/addiz/MyLOL</string>
    <string name="version">VERSION 1.0</string>
    <string name="pager_fir">My Info</string>
    <string name="pager_sec">Heros</string>
    <string name="hint">Game ID</string>
    <string name="login">Eter</string>
    <string name="basic_info">Basic Info</string>
    <string name="duanwei">Rank</string>
    <string name="duanwei_name">Rank Name</string>
    <string name="bingding_bottom">英雄联盟中国区信息查询助手</string>
    <string name="league_points">League Points</string>
    <string name="warzone_updated">Update Time</string>
    <string name="nav_change">Change User</string>
    <string name="jindian">Normal</string>
    <string name="renji">Robot</string>
    <string name="luandou">Smash </string>
    <string name="record">Record(Percent)</string>
    <string name="none">No Data....</string>
    <string name="authorName">Author：张啟迪（Addi）</string>
</resources>
