<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_about" />
    </group>
    <item android:title="@string/nav_other">
            <menu>
                <item
                    android:id="@+id/nav_change"
                    android:icon="@drawable/ic_menu_news"
                    android:title="@string/nav_change" />
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_menu_exit"
                    android:title="@string/nav_exit" />
            </menu>
    </item>
</menu>