<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    android:elevation="24dp"
    android:layout_marginTop="@dimen/card_padding"
    android:layout_marginBottom="@dimen/card_padding"
    android:layout_marginLeft="@dimen/card_padding"
    android:layout_marginRight="@dimen/card_padding"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:background="@drawable/shape_cartextview"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/record" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="35dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/jindian"
                />
            <cn.studyjamscn.s1.sj32.zhangqidi.View.ZhanDouLIView
                android:id="@+id/info_record_jingdian"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_margin="8dp"
                android:layout_height="40dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="35dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="8dp"
                android:text="@string/renji"
                android:gravity="center"
                />
            <cn.studyjamscn.s1.sj32.zhangqidi.View.ZhanDouLIView
                android:id="@+id/info_record_renji"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_margin="8dp"
                android:layout_height="40dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="35dp"
                android:text="@string/luandou"
                android:gravity="center"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="8dp"
                />
        <cn.studyjamscn.s1.sj32.zhangqidi.View.ZhanDouLIView
            android:id="@+id/info_record_luandou"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_margin="8dp"
            android:layout_height="40dp" />
        </LinearLayout>
        </LinearLayout>

</android.support.v7.widget.CardView>